# peers

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  LoadCSV.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/data/: Answer.ts  CSVParser.test.ts  CSVParser.ts  Question.ts  Review.test.ts  Review.ts  Student.test.ts  Student.ts  Submission.test.ts  Submission.ts  integration.test.ts
src/views/: App.tsx  Feedback.test.tsx  Feedback.tsx  FeedbackView.tsx  LoadCSV.test.tsx  LoadCSV.tsx  PeerReviews.tsx  StudentView.tsx  Students.test.tsx  Students.tsx
