[package]
name = "peers"
version = "1.0.0"
description = "A tool for aggregating peer feedback"
authors = ["Nathan Baxter"]
license = "MIT"
repository = "https://github.com/LogicWolfe/peers.git"
default-run = "peers"
edition = "2021"

[lib]
name = "peers_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
